src-errormsg/E02-SwapArguments/Plinth.err

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E02-SwapArguments/Plinth.hs:20:27: error: [GHC-83865]
    • Couldn't match expected type ‘Integer’
                  with actual type ‘a0 -> a0 -> a0’
    • The lambda expression ‘\ acc n -> acc + n’
      has two value arguments,
        but its type ‘Integer’ has none
      In the second argument of ‘foldList’, namely ‘(\ acc n -> acc + n)’
      In the expression: foldList 0 (\ acc n -> acc + n)
   |
20 | sumIntegers = foldList 0 (\acc n -> acc + n)
   |                           ^^^^^^^^^^^^^^^^^
